                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 19-01-2006 fixed: potential crash if application or gui asks dvdplayer if it is in menu and it hasn't completed loading it's input stream.
 - 19-01-2006 added: ability to select dvdbutton by remote button number (thnx to jdoering) 
 - 18-01-2006 changed: Music files with embedded images but no album tag are now cached only for the file.
 - 18-01-2006 fixed: [ 1405320 ] Stacked files could be "cleaned" of their stack criteria twice.
 - 18-01-2006 fixed: Buttonscroller initial visibility conditions on home.
 - 18-01-2006 fixed: Reload skin from button menu meant the button menu no longer worked.
 - 18-01-2006 fixed: Crash in SMBDirectory when fed with an invalid path.
 - 18-01-2006 fixed: Chat Console text should be all the right colour now.
 - 18-01-2006 fixed: Webserver crash with GetCurrentPlaying.
 - 17-01-2006 fixed: Crash in My Music Playlist window when new files are queued via another thread (web, python etc.)
 - 17-01-2006 fixed: Toggle buttons didn't show text when selected.
 - 17-01-2006 fixed: 720p or higher video playback with Hardware overlay renderer when GUI was 480p or lower.
 - 17-01-2006 fixed: Label2 alignment in listcontrols (including python)
 - 16-01-2006 fixed: Visibility reset due to home page fading from the code (affected The Orbs and CEOMR skins).
 - 16-01-2006 fixed: Skin reload from a button/action from a dialog.
 - 16-01-2006 fixed: Console control wasn't rendering any text.
 - 16-01-2006 fixed: Hidden Keyboard input wasn't working 100%
 - 16-01-2006 fixed: [ 1311457 ] ID3v2.2 embedded album art.