@@ -61,24 +61,10 @@ bool CGUIWindowVideoGenre::OnMessage(CGUIMessage& message)
   return CGUIWindowVideoBase::OnMessage(message);
 }
 
-//****************************************************************************************************************************
-bool CGUIWindowVideoGenre::Update(const CStdString &strDirectory)
+bool CGUIWindowVideoGenre::GetDirectory(const CStdString &strDirectory, CFileItemList &items)
 {
-  // get selected item
-  int iItem = m_viewControl.GetSelectedItem();
-  CStdString strSelectedItem = "";
-  if (iItem >= 0 && iItem < (int)m_vecItems.Size())
-  {
-    CFileItem* pItem = m_vecItems[iItem];
-    if (!pItem->IsParentFolder())
-    {
-      strSelectedItem = pItem->m_strPath;
-      m_history.SetSelectedItem(strSelectedItem, m_vecItems.m_strPath);
-    }
-  }
-  ClearFileItems();
-  m_vecItems.m_strPath = strDirectory;
-  if (m_vecItems.IsVirtualDirectoryRoot())
+  items.m_strPath = strDirectory;
+  if (items.IsVirtualDirectoryRoot())
   {
     VECMOVIEGENRES genres;
     m_database.GetGenres(genres, m_iShowMode);
@@ -90,10 +76,8 @@ bool CGUIWindowVideoGenre::Update(const CStdString &strDirectory)
       pItem->m_strPath = genres[i];
       pItem->m_bIsFolder = true;
       pItem->m_bIsShareOrDrive = false;
-      m_vecItems.Add(pItem);
+      items.Add(pItem);
     }
-    m_vecItems.m_strPath = "";
-    SET_CONTROL_LABEL(LABEL_GENRE, "");
   }
   else
   {
@@ -103,10 +87,11 @@ bool CGUIWindowVideoGenre::Update(const CStdString &strDirectory)
       pItem->m_strPath = "";
       pItem->m_bIsFolder = true;
       pItem->m_bIsShareOrDrive = false;
-      m_vecItems.Add(pItem);
+      items.Add(pItem);
     }
+
     VECMOVIES movies;
-    m_database.GetMoviesByGenre(m_vecItems.m_strPath, movies);
+    m_database.GetMoviesByGenre(items.m_strPath, movies);
     for (int i = 0; i < (int)movies.size(); ++i)
     {
       CIMDBMovie movie = movies[i];
@@ -133,11 +118,38 @@ bool CGUIWindowVideoGenre::Update(const CStdString &strDirectory)
           pItem->SetThumbnailImage(strThumb);
         pItem->m_fRating = movie.m_fRating;
         pItem->m_stTime.wYear = movie.m_iYear;
-        m_vecItems.Add(pItem);
+        items.Add(pItem);
       }
     }
-    SET_CONTROL_LABEL(LABEL_GENRE, m_vecItems.m_strPath);
   }
+
+  return true;
+}
+
+//****************************************************************************************************************************
+bool CGUIWindowVideoGenre::Update(const CStdString &strDirectory)
+{
+  // get selected item
+  int iItem = m_viewControl.GetSelectedItem();
+  CStdString strSelectedItem = "";
+  if (iItem >= 0 && iItem < (int)m_vecItems.Size())
+  {
+    CFileItem* pItem = m_vecItems[iItem];
+    if (!pItem->IsParentFolder())
+    {
+      strSelectedItem = pItem->m_strPath;
+      m_history.SetSelectedItem(strSelectedItem, m_vecItems.m_strPath);
+    }
+  }
+  ClearFileItems();
+
+  CStdString strOldDirectory = m_vecItems.m_strPath;
+
+  if (!GetDirectory(strDirectory, m_vecItems))
+    return !Update(strOldDirectory); // We assume, we can get the parent 
+                                     // directory again, but we have to 
+                                     // return false to be able to eg. show 
+                                     // an error message.
   m_vecItems.SetThumbs();
   SetIMDBThumbs(m_vecItems);
 
@@ -169,6 +181,12 @@ bool CGUIWindowVideoGenre::Update(const CStdString &strDirectory)
   }
 
   return true;
+}
+
+void CGUIWindowVideoGenre::UpdateButtons()
+{
+  CGUIWindowVideoBase::UpdateButtons();
+  SET_CONTROL_LABEL(LABEL_GENRE, m_vecItems.m_strPath);
 }
 
 void CGUIWindowVideoGenre::OnInfo(int iItem)
